--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <button id="startBtn">Start</button>
+ <img id="startBtn" src="./img/sun.png" alt="Start" />
   <canvas id="matrixCanvas"></canvas>
   <script src="script.js"></script>
 </body>
