--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
- <img id="startBtn" src="./img/sun.png" alt="Start" />
+  <img id="startBtn" src="./img/sun.png" alt="Start" />
   <canvas id="matrixCanvas"></canvas>
+  <div id="bubbleContainer"></div>
   <script src="script.js"></script>
 </body>
 </html>
